// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ebay-textbox > passes through additional html attributes 1`] = `
<input
  class="textbox__control"
  data-marko="{"onkeydown":"forwardEvent s0 false 0","onkeypress":"forwardEvent s0 false 1","onkeyup":"forwardEvent s0 false 2","onchange":"forwardEvent s0 false 3","oninput":"forwardEvent s0 false 4","onfocus":"onFocus s0 false","onblur":"onBlur s0 false","oninvalid":"forwardEvent s0 false 5"}"
  data-marko-key="@input s0"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  id="s0-textbox"
  type="text"
/>
`;

exports[`ebay-textbox > passes through additional html attributes 2`] = `
<span
  class="textbox class1"
  style="color:red"
>
  <input
    class="textbox__control"
    data-marko="{"onkeydown":"forwardEvent s0 false 0","onkeypress":"forwardEvent s0 false 1","onkeyup":"forwardEvent s0 false 2","onchange":"forwardEvent s0 false 3","oninput":"forwardEvent s0 false 4","onfocus":"onFocus s0 false","onblur":"onBlur s0 false","oninvalid":"forwardEvent s0 false 5"}"
    data-marko-key="@input s0"
    data-passed-through="true"
    data-testid="AttributePassthrough"
    id="s0-textbox"
    type="text"
  />
</span>
`;

exports[`ebay-textbox > renders a disabled input textbox 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"field"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"field__label field__label--start field__label--disabled"[39m
      [33mfor[39m=[32m"textbox"[39m
    [36m>[39m
      [0mEmail address[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"textbox textbox--disabled"[39m
    [36m>[39m
      [36m<input[39m
        [33mclass[39m=[32m"textbox__control"[39m
        [33mdisabled[39m=[32m""[39m
        [33mid[39m=[32m"textbox"[39m
        [33mtype[39m=[32m"text"[39m
        [33mvalue[39m=[32m"test"[39m
      [36m/>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders a disabled input textbox with disabled floating label 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"floating-label"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label floating-label__label--disabled"[39m
      [33mfor[39m=[32m"s0-0-textbox"[39m
    [36m>[39m
      [0mEmail address[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"textbox textbox--disabled"[39m
    [36m>[39m
      [36m<input[39m
        [33mclass[39m=[32m"textbox__control"[39m
        [33mdisabled[39m=[32m""[39m
        [33mid[39m=[32m"s0-0-textbox"[39m
        [33mtype[39m=[32m"text"[39m
        [33mvalue[39m=[32m"test"[39m
      [36m/>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders a input textbox with external label 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"field"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"field__label field__label--start"[39m
      [33mfor[39m=[32m"textbox"[39m
    [36m>[39m
      [0mEmail address[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"textbox"[39m
    [36m>[39m
      [36m<input[39m
        [33mclass[39m=[32m"textbox__control"[39m
        [33mid[39m=[32m"textbox"[39m
        [33mtype[39m=[32m"text"[39m
        [33mvalue[39m=[32m"test"[39m
      [36m/>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders a input textbox with invalid/error state 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"textbox textbox--invalid"[39m
  [36m>[39m
    [36m<input[39m
      [33maria-invalid[39m=[32m"true"[39m
      [33mclass[39m=[32m"textbox__control"[39m
      [33mdata-marko[39m=[32m"{\\"onkeydown\\":\\"forwardEvent s0 false 0\\",\\"onkeypress\\":\\"forwardEvent s0 false 1\\",\\"onkeyup\\":\\"forwardEvent s0 false 2\\",\\"onchange\\":\\"forwardEvent s0 false 3\\",\\"oninput\\":\\"forwardEvent s0 false 4\\",\\"onfocus\\":\\"onFocus s0 false\\",\\"onblur\\":\\"onBlur s0 false\\",\\"oninvalid\\":\\"forwardEvent s0 false 5\\"}"[39m
      [33mdata-marko-key[39m=[32m"@input s0"[39m
      [33mid[39m=[32m"s0-textbox"[39m
      [33mtype[39m=[32m"text"[39m
    [36m/>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders a textarea element 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"textbox"[39m
  [36m>[39m
    [36m<textarea[39m
      [33mclass[39m=[32m"textbox__control"[39m
      [33mdata-marko[39m=[32m"{\\"onkeydown\\":\\"forwardEvent s0 false 0\\",\\"onkeypress\\":\\"forwardEvent s0 false 1\\",\\"onkeyup\\":\\"forwardEvent s0 false 2\\",\\"onchange\\":\\"forwardEvent s0 false 3\\",\\"oninput\\":\\"forwardEvent s0 false 4\\",\\"onfocus\\":\\"onFocus s0 false\\",\\"onblur\\":\\"onBlur s0 false\\",\\"oninvalid\\":\\"forwardEvent s0 false 5\\"}"[39m
      [33mdata-marko-key[39m=[32m"@input s0"[39m
      [33mid[39m=[32m"s0-textbox"[39m
    [36m/>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders a textarea element with postfix icon 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"textbox"[39m
  [36m>[39m
    [36m<input[39m
      [33mclass[39m=[32m"textbox__control"[39m
      [33mdata-marko[39m=[32m"{\\"onkeydown\\":\\"forwardEvent s0-0 false 0\\",\\"onkeypress\\":\\"forwardEvent s0-0 false 1\\",\\"onkeyup\\":\\"forwardEvent s0-0 false 2\\",\\"onchange\\":\\"forwardEvent s0-0 false 3\\",\\"oninput\\":\\"forwardEvent s0-0 false 4\\",\\"onfocus\\":\\"onFocus s0-0 false\\",\\"onblur\\":\\"onBlur s0-0 false\\",\\"oninvalid\\":\\"forwardEvent s0-0 false 5\\"}"[39m
      [33mdata-marko-key[39m=[32m"@input s0-0"[39m
      [33mid[39m=[32m"s0-0-textbox"[39m
      [33mplaceholder[39m=[32m"name"[39m
      [33mtype[39m=[32m"text"[39m
    [36m/>[39m
    [36m<svg[39m
      [33maria-hidden[39m=[32m"true"[39m
      [33mclass[39m=[32m"icon icon--24"[39m
      [33mdata-marko-key[39m=[32m"@svg s0-0-9-1-0"[39m
      [33mfocusable[39m=[32m"false"[39m
    [36m>[39m
      [36m<defs[39m
        [33mdata-marko-key[39m=[32m"@defs s0-0-9-1-0"[39m
      [36m>[39m
        [36m<symbol[39m
          [33mid[39m=[32m"icon-profile-24"[39m
          [33mviewBox[39m=[32m"0 0 24 24"[39m
        [36m>[39m
          [36m<path[39m
            [33mclip-rule[39m=[32m"evenodd"[39m
            [33md[39m=[32m"M16 10a4 4 0 1 1-8 0 4 4 0 0 1 8 0Zm-2 0a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"[39m
            [33mfill-rule[39m=[32m"evenodd"[39m
          [36m/>[39m
          [36m<path[39m
            [33mclip-rule[39m=[32m"evenodd"[39m
            [33md[39m=[32m"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Zm-6.404 7.74A8.958 8.958 0 0 1 12 21c-1.68 0-3.25-.46-4.596-1.26C8.147 18.177 9.853 17 12 17c2.147 0 3.853 1.177 4.596 2.74Zm1.62-1.231C17.05 16.424 14.704 15 12 15s-5.05 1.424-6.216 3.508a9 9 0 1 1 12.432 0Z"[39m
            [33mfill-rule[39m=[32m"evenodd"[39m
          [36m/>[39m
        [36m</symbol>[39m
      [36m</defs>[39m
      [36m<use[39m
        [33mhref[39m=[32m"#icon-profile-24"[39m
      [36m/>[39m
    [36m</svg>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders a textarea element with postfix icon button 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"textbox"[39m
  [36m>[39m
    [36m<svg[39m
      [33maria-hidden[39m=[32m"true"[39m
      [33mclass[39m=[32m"icon icon--24"[39m
      [33mfocusable[39m=[32m"false"[39m
    [36m>[39m
      [36m<defs>[39m
        [36m<symbol[39m
          [33mid[39m=[32m"icon-profile-24"[39m
          [33mviewBox[39m=[32m"0 0 24 24"[39m
        [36m>[39m
          [36m<path[39m
            [33mclip-rule[39m=[32m"evenodd"[39m
            [33md[39m=[32m"M16 10a4 4 0 1 1-8 0 4 4 0 0 1 8 0Zm-2 0a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"[39m
            [33mfill-rule[39m=[32m"evenodd"[39m
          [36m/>[39m
          [36m<path[39m
            [33mclip-rule[39m=[32m"evenodd"[39m
            [33md[39m=[32m"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Zm-6.404 7.74A8.958 8.958 0 0 1 12 21c-1.68 0-3.25-.46-4.596-1.26C8.147 18.177 9.853 17 12 17c2.147 0 3.853 1.177 4.596 2.74Zm1.62-1.231C17.05 16.424 14.704 15 12 15s-5.05 1.424-6.216 3.508a9 9 0 1 1 12.432 0Z"[39m
            [33mfill-rule[39m=[32m"evenodd"[39m
          [36m/>[39m
        [36m</symbol>[39m
      [36m</defs>[39m
      [36m<use[39m
        [33mhref[39m=[32m"#icon-profile-24"[39m
      [36m/>[39m
    [36m</svg>[39m
    [36m<input[39m
      [33mclass[39m=[32m"textbox__control"[39m
      [33mid[39m=[32m"s0-@textbox-textbox"[39m
      [33mplaceholder[39m=[32m"name"[39m
      [33mtype[39m=[32m"text"[39m
      [33mvalue[39m=[32m""[39m
    [36m/>[39m
    [36m<button[39m
      [33maria-label[39m=[32m"Clear"[39m
      [33mclass[39m=[32m"icon-btn icon-btn--transparent"[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<svg[39m
        [33maria-hidden[39m=[32m"true"[39m
        [33mclass[39m=[32m"icon icon--24"[39m
        [33mfocusable[39m=[32m"false"[39m
      [36m>[39m
        [36m<defs>[39m
          [36m<symbol[39m
            [33mid[39m=[32m"icon-close-24"[39m
            [33mviewBox[39m=[32m"0 0 24 24"[39m
          [36m>[39m
            [36m<path[39m
              [33md[39m=[32m"m13.41 12 7.3-7.29a1.004 1.004 0 0 0-1.42-1.42L12 10.59l-7.29-7.3a1.003 1.003 0 1 0-1.42 1.42l7.3 7.29-7.3 7.29a1.001 1.001 0 0 0 0 1.42 1.001 1.001 0 0 0 1.42 0l7.29-7.3 7.29 7.3a1.001 1.001 0 0 0 1.42 0 1.001 1.001 0 0 0 0-1.42L13.41 12Z"[39m
            [36m/>[39m
          [36m</symbol>[39m
        [36m</defs>[39m
        [36m<use[39m
          [33mhref[39m=[32m"#icon-close-24"[39m
        [36m/>[39m
      [36m</svg>[39m
    [36m</button>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders a textarea element with prefix icon 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"textbox"[39m
  [36m>[39m
    [36m<svg[39m
      [33maria-hidden[39m=[32m"true"[39m
      [33mclass[39m=[32m"icon icon--24"[39m
      [33mdata-marko-key[39m=[32m"@svg s0-0-3-1-0"[39m
      [33mfocusable[39m=[32m"false"[39m
    [36m>[39m
      [36m<defs[39m
        [33mdata-marko-key[39m=[32m"@defs s0-0-3-1-0"[39m
      [36m>[39m
        [36m<symbol[39m
          [33mid[39m=[32m"icon-mail-24"[39m
          [33mviewBox[39m=[32m"0 0 24 24"[39m
        [36m>[39m
          [36m<path[39m
            [33mclip-rule[39m=[32m"evenodd"[39m
            [33md[39m=[32m"M4 3a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h16a3 3 0 0 0 3-3V6a3 3 0 0 0-3-3H4Zm17 3.5V6a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v.5l8.4 6.3a1 1 0 0 0 1.2 0L21 6.5ZM3 9v9a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V9l-7.2 5.4a3 3 0 0 1-3.6 0L3 9Z"[39m
            [33mfill-rule[39m=[32m"evenodd"[39m
          [36m/>[39m
        [36m</symbol>[39m
      [36m</defs>[39m
      [36m<use[39m
        [33mhref[39m=[32m"#icon-mail-24"[39m
      [36m/>[39m
    [36m</svg>[39m
    [36m<input[39m
      [33mclass[39m=[32m"textbox__control"[39m
      [33mdata-marko[39m=[32m"{\\"onkeydown\\":\\"forwardEvent s0-0 false 0\\",\\"onkeypress\\":\\"forwardEvent s0-0 false 1\\",\\"onkeyup\\":\\"forwardEvent s0-0 false 2\\",\\"onchange\\":\\"forwardEvent s0-0 false 3\\",\\"oninput\\":\\"forwardEvent s0-0 false 4\\",\\"onfocus\\":\\"onFocus s0-0 false\\",\\"onblur\\":\\"onBlur s0-0 false\\",\\"oninvalid\\":\\"forwardEvent s0-0 false 5\\"}"[39m
      [33mdata-marko-key[39m=[32m"@input s0-0"[39m
      [33mid[39m=[32m"s0-0-textbox"[39m
      [33mplaceholder[39m=[32m"email"[39m
      [33mtype[39m=[32m"text"[39m
    [36m/>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders a textbox element with floating label and without prefix icon 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"floating-label"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label"[39m
      [33mfor[39m=[32m"s0-0-textbox"[39m
    [36m>[39m
      [0mtest label[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"textbox"[39m
    [36m>[39m
      [36m<input[39m
        [33mclass[39m=[32m"textbox__control"[39m
        [33mdata-marko[39m=[32m"{\\"onkeydown\\":\\"forwardEvent s0-0 false 0\\",\\"onkeypress\\":\\"forwardEvent s0-0 false 1\\",\\"onkeyup\\":\\"forwardEvent s0-0 false 2\\",\\"onchange\\":\\"forwardEvent s0-0 false 3\\",\\"oninput\\":\\"forwardEvent s0-0 false 4\\",\\"onfocus\\":\\"onFocus s0-0 false\\",\\"onblur\\":\\"onBlur s0-0 false\\",\\"oninvalid\\":\\"forwardEvent s0-0 false 5\\"}"[39m
        [33mdata-marko-key[39m=[32m"@input s0-0"[39m
        [33mid[39m=[32m"s0-0-textbox"[39m
        [33mplaceholder[39m=[32m"email"[39m
        [33mtype[39m=[32m"text"[39m
      [36m/>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders an input textbox with inline floating label 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"floating-label"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label"[39m
      [33mfor[39m=[32m"s0-0-textbox"[39m
    [36m>[39m
      [0mEmail address[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"textbox"[39m
    [36m>[39m
      [36m<input[39m
        [33mclass[39m=[32m"textbox__control"[39m
        [33mid[39m=[32m"s0-0-textbox"[39m
        [33mtype[39m=[32m"text"[39m
        [33mvalue[39m=[32m"test"[39m
      [36m/>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders an input textbox with inline floating label and an id 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"floating-label"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label"[39m
      [33mfor[39m=[32m"text-id"[39m
    [36m>[39m
      [0mEmail address[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"textbox"[39m
    [36m>[39m
      [36m<input[39m
        [33mclass[39m=[32m"textbox__control"[39m
        [33mid[39m=[32m"text-id"[39m
        [33mtype[39m=[32m"text"[39m
        [33mvalue[39m=[32m"test"[39m
      [36m/>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders an input textbox with opaque floating label 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"floating-label floating-label--opaque"[39m
  [36m>[39m
    [36m<label[39m
      [33mclass[39m=[32m"floating-label__label"[39m
      [33mfor[39m=[32m"s0-0-textbox"[39m
    [36m>[39m
      [0mEmail address[0m
    [36m</label>[39m
    [36m<span[39m
      [33mclass[39m=[32m"textbox"[39m
    [36m>[39m
      [36m<input[39m
        [33mclass[39m=[32m"textbox__control"[39m
        [33mid[39m=[32m"s0-0-textbox"[39m
        [33mtype[39m=[32m"text"[39m
        [33mvalue[39m=[32m"test"[39m
      [36m/>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders default input textbox 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"textbox"[39m
  [36m>[39m
    [36m<input[39m
      [33mclass[39m=[32m"textbox__control"[39m
      [33mdata-marko[39m=[32m"{\\"onkeydown\\":\\"forwardEvent s0 false 0\\",\\"onkeypress\\":\\"forwardEvent s0 false 1\\",\\"onkeyup\\":\\"forwardEvent s0 false 2\\",\\"onchange\\":\\"forwardEvent s0 false 3\\",\\"oninput\\":\\"forwardEvent s0 false 4\\",\\"onfocus\\":\\"onFocus s0 false\\",\\"onblur\\":\\"onBlur s0 false\\",\\"oninvalid\\":\\"forwardEvent s0 false 5\\"}"[39m
      [33mdata-marko-key[39m=[32m"@input s0"[39m
      [33mid[39m=[32m"s0-textbox"[39m
      [33mtype[39m=[32m"text"[39m
    [36m/>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders default input textbox with an id 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"textbox"[39m
  [36m>[39m
    [36m<input[39m
      [33mclass[39m=[32m"textbox__control"[39m
      [33mdata-marko[39m=[32m"{\\"onkeydown\\":\\"forwardEvent s0 false 0\\",\\"onkeypress\\":\\"forwardEvent s0 false 1\\",\\"onkeyup\\":\\"forwardEvent s0 false 2\\",\\"onchange\\":\\"forwardEvent s0 false 3\\",\\"oninput\\":\\"forwardEvent s0 false 4\\",\\"onfocus\\":\\"onFocus s0 false\\",\\"onblur\\":\\"onBlur s0 false\\",\\"oninvalid\\":\\"forwardEvent s0 false 5\\"}"[39m
      [33mdata-marko-key[39m=[32m"@input s0"[39m
      [33mid[39m=[32m"textbox-id"[39m
      [33mtype[39m=[32m"text"[39m
    [36m/>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`ebay-textbox > renders fluid input textbox 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"textbox textbox--fluid"[39m
  [36m>[39m
    [36m<input[39m
      [33mclass[39m=[32m"textbox__control"[39m
      [33mdata-marko[39m=[32m"{\\"onkeydown\\":\\"forwardEvent s0 false 0\\",\\"onkeypress\\":\\"forwardEvent s0 false 1\\",\\"onkeyup\\":\\"forwardEvent s0 false 2\\",\\"onchange\\":\\"forwardEvent s0 false 3\\",\\"oninput\\":\\"forwardEvent s0 false 4\\",\\"onfocus\\":\\"onFocus s0 false\\",\\"onblur\\":\\"onBlur s0 false\\",\\"oninvalid\\":\\"forwardEvent s0 false 5\\"}"[39m
      [33mdata-marko-key[39m=[32m"@input s0"[39m
      [33mid[39m=[32m"s0-textbox"[39m
      [33mtype[39m=[32m"text"[39m
    [36m/>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;
